# Inverted_Pendulum

./: .gitignore  2024_Solutions_Planning.md  README.md  notes.md
Documents/stepper/: SY57STH76-1006A.step
ROS2_Documentation/: list_commands_ran.md
arduino_code/: double_pid_control.ino
arduino_code/naive_control/: limit_switches.ino  naive_control_system.ino  read_encoder.ino  test_stepper.ino
arduino_code/rl_control/: main.ino
arduino_code/tests/: read_encoder.py  send_encoder.ino
models/: TD3_CartPole-v1_0.npy  TD3_CartPole-v1_0_actor  TD3_CartPole-v1_0_actor_optimizer  TD3_CartPole-v1_0_critic  TD3_CartPole-v1_0_critic_optimizer  policy.pt
models/best_td3/: TD3_CartPole-v1_0.npy  TD3_CartPole-v1_0_actor  TD3_CartPole-v1_0_actor_optimizer  TD3_CartPole-v1_0_critic
models/dqn_catcher/: behavioral_dqn.pth  target_dqn.pth
models/first_working_models/: TD3_CartPole-v1_0.npy  TD3_CartPole-v1_0_actor_optimizer  TD3_CartPole-v1_0_critic
models/first_working_td3/: TD3_CartPole-v1_0_actor  TD3_CartPole-v1_0_critic_optimizer
models/init_pendulum_down/: latency_2_behavioral_dqn.pth  latency_2_target_dqn.pth
models/init_pendulum_up/: latency_2_target_dqn.pth  target_dqn.pth
models/old_cpp_models/: policy.pt  policy3.pt
naive_control_system/: naive_control_system.ino  naive_control_system_documented.ino  notes.md
preliminary_tests/: README.md  python_ros_adapter.py  requirements.txt  sensitivity_analysis.py  td3_model_to_cpp.py  test_dqn_model.py  train_dqn_model.py
preliminary_tests/model_weights/: balanced_target_dqn.pth  behavioral_dqn.pth  best_min_perturbations_target_dqn.pth  policy_network.pth  target_dqn.pth
preliminary_tests/model_weights/init_pendulum_up/: balanced_behavioral_dqn.pth  behavioral_dqn.pth  latency_2_behavioral_dqn.pth  significant_perturbations_target_dqn.pth
preliminary_tests/models/: dqn.py  td3.py  td3_main.py  td3_main_with_polelength_param.py  test_dqn_model.py  test_env.py  test_td3.py  train_dqn_model.py
preliminary_tests/models/pv_state_models/: test_td3.py
preliminary_tests/test/: env_test.py  remote_control.py
ros_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros_ws/src/inverted_pendulum/: CMakeLists.txt  package.xml
ros_ws/src/inverted_pendulum/include/inverted_pendulum/: arduino_comm.hpp  interp_1d.h  interp_linear.h  interpolate.hpp  nr3.h  socket_helper.hpp
ros_ws/src/inverted_pendulum/launch/: launch.xml
ros_ws/src/inverted_pendulum/src/: adapter.cpp  encoder_adapter.cpp  full_state_estimator.cpp  simulated_encoder.cpp  state_estimator.cpp  td3_algorithm.cpp
